module(
    name = "rules_gitops",
    version = "0.50.0",
)

bazel_dep(name = "aspect_bazel_lib", version = "2.7.1")
bazel_dep(name = "bazel_skylib", version = "1.5.0")

bazel_dep(name = "platforms", version = "0.0.10")
bazel_dep(name = "rules_oci", version = "1.7.2")
bazel_dep(name = "rules_pkg", version = "0.9.1")
bazel_dep(name = "rules_go", version = "0.48.0", repo_name = "io_bazel_rules_go")

go_sdk = use_extension("@io_bazel_rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.21.12")

bazel_dep(name = "gazelle", version = "0.37.0", repo_name = "bazel_gazelle")

toolchains = use_extension(
    "@rules_gitops//gitops:extensions.bzl",
    "toolchains",
)
toolchains.kustomize()
use_repo(toolchains, "kustomize_bin", "kustomize_toolchains")

register_toolchains("@kustomize_toolchains//:all")

# Uncomment this part when bazel 6 is deprecated. Supported in bazel 7
# kubeconfig = use_repo_rule("@rules_gitops//skylib:k8s.bzl", "kubeconfig")

# kubeconfig(
#     name = "k8s_test",
#     cluster = "mycluster",
#     use_host_config = True,
# )

bazel_dep(name = "buildifier_prebuilt", version = "6.4.0", dev_dependency = True)
