bazel_dep(name = "rules_go", version = "0.44.0", repo_name = "io_bazel_rules_go")
bazel_dep(name = "rules_oci", version = "1.5.1")
oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")
oci.pull(
    name = "go_image_static",
    digest = "sha256:ebd8cc37d22551dce0957ba8e58f03b22a8448bbf844c8c9ded4feef883b36bc",
    image = "gcr.io/distroless/static",
    # platforms = ["linux/amd64"],
)

# For each oci.pull call, repeat the "name" here to expose them as dependencies.
use_repo(oci, "go_image_static")

bazel_dep(name = "rules_gitops", version = "0.50.0")
local_path_override(
    module_name = "rules_gitops",
    path = "../",
)
kubeconfig = use_repo_rule("@rules_gitops//skylib:k8s.bzl", "kubeconfig")

kubeconfig(
    name = "k8s_test",
    cluster = "gke_rules-gitops-demo_us-central1_cluster-demo",
    use_host_config = True,
)
