load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

exports_files([
    # For stardoc to reference the files
    "defs.bzl",
    # For mirror rule
    "mirror_image.sh",
    "validate_image.sh",
])

bzl_library(
    name = "repositories",
    srcs = ["repositories.bzl"],
    visibility = ["//visibility:public"],
    deps = [
        "//mirror/private:versions",
        "@bazel_tools//tools/build_defs/repo:http.bzl",
        "@bazel_tools//tools/build_defs/repo:utils.bzl",
    ],
)

bzl_library(
    name = "defs",
    srcs = ["defs.bzl"],
    visibility = ["//visibility:public"],
)
